[FindBugs] Use valueOf instead of new Integer