@@ -94,7 +94,7 @@ public class SearchModel extends AbstractListModel implements
 
     final protected static Comparator<MassResult> comparator = new Comparator<MassResult>() {
         public int compare(MassResult o1, MassResult o2) {
-            return new Integer(o2.getSimilarity()).compareTo(new Integer(o1
+            return Integer.valueOf(o2.getSimilarity()).compareTo(Integer.valueOf(o1
                     .getSimilarity()));
         }
     };
